# rust-code

./: .bazelrc  .envrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  Makefile  README.md  WORKSPACE  build.rs  index.html  input.css  package-lock.json  tailwind.config.js
another/: Cargo.toml  Makefile
another/src/: lib.rs
financial/: Cargo.toml  Makefile
financial/src/: BUILD.bazel  lib.rs
leptadw/: Cargo.toml  build.rs  leptosfmt.toml  rustfmt.toml
leptadw/src/: BUILD.bazel  app.rs  lib.rs  main.rs  pb.rs
leptadw/src/pb/prostpb/: README.md  delivery.rs  delivery.storemanager.rs
leptadw/src/pb/tonicpb/: README.md  delivery.storemanager.rs
src/: BUILD.bazel  Makefile  app.rs  components.rs  financial.rs  forms.rs  lib.rs  main.rs  pb.rs  state.rs  types.rs
src/financial/: money.rs
src/pb/prostpb/: BUILD.bazel
src/playground/: BUILD.bazel  main.rs
style/: output.css
