load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "lib",
    srcs = ["lib.rs"],
)

rust_binary(
    name = "main",
    srcs = ["main.rs"],
)

rust_library(
    name = "pb",
    srcs = ["pb.rs"],
)

rust_library(
    name = "financial",
    srcs = ["financial.rs"],
)

rust_test(
    name = "financial_test",
    crate = ":financial",
)
