load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "app",
    srcs = ["app.rs"],
)

rust_library(
    name = "components",
    srcs = ["components.rs"],
)

rust_library(
    name = "error_template",
    srcs = ["error_template.rs"],
)

rust_library(
    name = "fileserv",
    srcs = ["fileserv.rs"],
)

rust_library(
    name = "lib",
    srcs = ["lib.rs"],
)

rust_binary(
    name = "main",
    srcs = ["main.rs"],
)

rust_library(
    name = "pb",
    srcs = ["pb.rs"],
)

rust_library(
    name = "state",
    srcs = ["state.rs"],
)

rust_library(
    name = "types",
    srcs = ["types.rs"],
)
